--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "neuron-php/util",
+    "name": "neuron-php/forma",
     "description": "Miscellaneous utility classes.",
     "type": "library",
     "license": "MIT",
