--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "ext-curl": "*",
         "ext-json": "*",
-        "neuron-php/patterns": "^0.5.1"
+        "neuron-php/data": "^0.5.1"
     },
     "require-dev": {
         "phpunit/phpunit": "7.*"
