--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     ],
     "require": {
         "ext-curl": "*",
-        "ext-json": "*",
-        "neuron-php/data": "0.5.*"
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "9.*"
