--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,9 @@
         }
     ],
     "require": {
-        "ext-curl": "*",
-        "ext-json": "*"
+      "ext-curl": "*",
+      "ext-json": "*",
+      "neuron-php/core": "^0.7.0"
     },
     "require-dev": {
         "phpunit/phpunit": "9.*"
