--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
       "ext-curl": "*",
       "ext-json": "*",
-      "neuron-php/core": "^0.7.0"
+      "neuron-php/core": "0.8.*"
     },
     "require-dev": {
         "phpunit/phpunit": "9.*"
