--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,9 +24,10 @@ jobs:
       run: vendor/bin/phpunit tests --coverage-clover coverage.xml --coverage-filter src
 
     - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v3
+      uses: codecov/codecov-action@v5
       with:
+        token: ${{ secrets.CODECOV_TOKEN }}
         files: ./coverage.xml
         flags: formatters
-        token: ${{ secrets.CODECOV_TOKEN }}
-        fail_ci_if_error: false
+        slug: Neuron-PHP/formatting
+        fail_ci_if_error: true
